--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
+<!doctype html>
+<html>
+<head>
+<title>WEB - html</title>
+<meta charset="utf-8">
+</head>
 
+<body>
+  <h1><a href="index.html">WEB</a></h1>
+<ol>
+  <li><a href="1.html">HTML</a></li>
+  <li><a href="2.html">CSS</a></li>
+  <li><a href="3.html">JavaScript</a></li>
+</ol>
+<br>
+  ol ordered list, li list
+<br>ul unordered list,
+<h1>CSS 란 무엇인가?</h1>hallhljalg lajsdfl l gll e ljljafd fjl leaj gla sdad  lajsdfl
+asdkjf aldj <strong>galdf</strong> adsfalgladg lajdsl asddlfasd f.
+falkjd<u>slfjaldkjfla.</u>
+
+<img src ="mushroom.png" width=150><br><br>ljadjflaj
+<p><a href="https://www.w3schools.com/html/">HTML Tutorial</a><br>dsljfajkglakjdlfa
+jajkdjfadkjflajdflajdlfkjadkfjadjfladjlfajsdjflad</p>
+</body>
+</html>
