--- a/2.html
+++ b/2.html
@@ -12,7 +12,11 @@
   <li><a href="2.html">CSS</a></li>
   <li><a href="3.html">JavaScript</a></li>
 </ol>
-<br>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/VTGCN98nPTI" 
+title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+        allowfullscreen></iframe>
+  <br>
+  
   ol ordered list, li list
 <br>ul unordered list,
 <h1>CSS 란 무엇인가?</h1>hallhljalg lajsdfl l gll e ljljafd fjl leaj gla sdad  lajsdfl
